--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,11 @@ form{
     position: relative;
     transition: all 0.2s ease-in-out;
 }
+
+h4{
+    color: #ffffff;
+    font-family: Arial, Helvetica, sans-serif;
+}
 form p{
     font-weight: bold;
     color: #fff;
@@ -52,7 +57,7 @@ form input{
     border-radius: 5000px;
     backdrop-filter: blur(5px);
     box-shadow: 4px 4px 60px rgba(177, 175, 175, 0.2);
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     color: #ffffff;
     font-weight: bold;
     transition: all 0.2s ease-in-out;
